data/derived/sp14/progs/unify/prog0458.ml.out
Characters 483-506:
  | Op1 e                   -> (tan(pi *. eval(e,x,y))) -. ((tan(pi *.eval(e,x,y)))/2.0)
                                                            ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
